--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>ESKOMarketing</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-logo">
+            <span>ESKOMarketing</span>
+            <span class="subtext">Your technologies</span>
+        </div>
+        <div class="header-menu">
+            <ul class="menu-list">
+                <li class="menu-list__item"><a href="#">Главная</a></li>
+                <li class="menu-list__item"><a href="#">Сайты</a></li>
+                <li class="menu-list__item"><a href="#">Реклама</a></li>
+                <li class="menu-list__item"><a href="#">Аренда</a></li>
+                <li class="menu-list__item"><a href="#">Кейсы</a></li>
+                <li class="menu-list__item"><a href="#">Контакты</a></li>
+            </ul>
+            <div class="menu-contacts">
+                <span><a href="tel:+79806884009">+7(980)688-40-09</a></span>
+            </div>
+        </div>
+    </header>
 
     <script src="script.js"></script>
 </body>
