main section start

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         </div>
     </header>
 
+    <main class="wrapper">
+        <div class="leading-products">
+            <div class="leading-products__info">
+                <h2>Почему мы?</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eum id atque dolores harum sit nam cupiditate, sequi dolor rem.</p>
+            </div>
+            <img src="img/main-image.png" alt="">
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
