--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>ESKOMarketing</title>
 </head>
 <body>
+<!-- Header -->
     <header>
         <div class="header-logo">
             <span>ESKOMarketing</span>
@@ -27,17 +28,39 @@
             </div>
         </div>
     </header>
-
+<!-- Header end -->
+<!-- Main section -->
     <main class="wrapper">
         <div class="leading-products">
             <div class="leading-products__info">
                 <h2>Почему мы?</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eum id atque dolores harum sit nam cupiditate, sequi dolor rem.</p>
             </div>
-            <img src="img/main-image.png" alt="">
+            <img src="img/main-image.png" alt="Image">
         </div>
     </main>
-
+<!-- Main section end -->
+<!-- Footer -->
+    <footer>
+        <div class="footer">
+            <div class="footer-logo">
+                <span>ESKOMarketing</span>
+                <span class="subtext">Your technologies</span>
+            </div>
+            <div class="footer-menu">
+                <ul>
+                    <li class="footer-menu__items"><a href="#">Главная</a></li>
+                    <li class="footer-menu__items"><a href="#">Сайты</a></li>
+                    <li class="footer-menu__items"><a href="#">Реклама</a></li>
+                    <li class="footer-menu__items"><a href="#">Аренда</a></li>
+                    <li class="footer-menu__items"><a href="#">Кейсы</a></li>
+                    <li class="footer-menu__items"><a href="#">Контакты</a></li>
+                </ul>
+                <a href="tel:+79806884009"><img src="img/phone.png" alt="Phone" class="footer-menu__tel"></a>
+                <span><a href="tel:+79806884009">+79806884009</a></span>
+            </div>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
