callback form add

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 <!-- Header end -->
+
+
+
+
 <!-- Main section -->
     <main class="wrapper">
         <div class="leading-products">
@@ -38,8 +42,24 @@
             </div>
             <img src="img/main-image.png" alt="Image">
         </div>
+        
+        <div class="callback wrapper">
+            <h2 class="callback-title">Нужна консультация?</h2>
+            <div class="callback-form">
+                <div class="callback-form__input">
+                    <input type="tel" name="callback-input" placeholder="Введите номер телефона" id="callback-input">
+                </div>
+                <div class="callback-form__btn">
+                    <button type="submit" id="submit-btn">Отправить заявку</button>
+                </div>
+            </div>
+        </div>
     </main>
 <!-- Main section end -->
+
+
+
+
 <!-- Footer -->
     <footer>
         <div class="footer">
@@ -61,6 +81,8 @@
             </div>
         </div>
     </footer>
+
+
     <script src="script.js"></script>
 </body>
 </html>
