contacts page add

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         </div>
         <div class="header-menu">
             <ul class="menu-list">
-                <li class="menu-list__item"><a href="#">Главная</a></li>
+                <li class="menu-list__item"><a href="/index.html">Главная</a></li>
                 <li class="menu-list__item"><a href="#">Сайты</a></li>
                 <li class="menu-list__item"><a href="#">Реклама</a></li>
                 <li class="menu-list__item"><a href="#">Аренда</a></li>
                 <li class="menu-list__item"><a href="#">Кейсы</a></li>
-                <li class="menu-list__item"><a href="#">Контакты</a></li>
+                <li class="menu-list__item"><a href="/contacts.html">Контакты</a></li>
             </ul>
             <div class="menu-contacts">
                 <span><a href="tel:+79806884009">+7(980)688-40-09</a></span>
