footer links fix

--- a/contacts.html
+++ b/contacts.html
@@ -66,12 +66,12 @@
             </div>
             <div class="footer-menu">
                 <ul>
-                    <li class="footer-menu__items"><a href="#">Главная</a></li>
+                    <li class="footer-menu__items"><a href="/index.html">Главная</a></li>
                     <li class="footer-menu__items"><a href="#">Сайты</a></li>
                     <li class="footer-menu__items"><a href="#">Реклама</a></li>
                     <li class="footer-menu__items"><a href="#">Аренда</a></li>
                     <li class="footer-menu__items"><a href="#">Кейсы</a></li>
-                    <li class="footer-menu__items"><a href="#">Контакты</a></li>
+                    <li class="footer-menu__items"><a href="/contacts.html">Контакты</a></li>
                 </ul>
                 <a href="tel:+79806884009"><img src="img/phone.png" alt="Phone" class="footer-menu__tel"></a>
                 <span><a href="tel:+79806884009">+79806884009</a></span>
